[svn r17636] remove props